--- a/Lab2/task1/index.html
+++ b/Lab2/task1/index.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Facebook Login</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="box">
+        <div class="title-box">
+            <img src="logo.png" alt="Facebook">
+            <p>Facebook helps you stay connected and stay in touch with your friends.</p>
+        </div>
+        <div class="form-box">
+            <form action="#">
+                <input type="text" placeholder="Email address or phone number">
+                <input type="password" placeholder="Password">
+                <button type="submit">Log in</button>
+                <a href="#">Forgotten Password</a>
+            </form>
+            <hr>
+            <div class="create-btn">
+                <a href="#">Create New Account</a>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
