--- a/Lab2/task2/index.html
+++ b/Lab2/task2/index.html
@@ -1,1 +1,32 @@
-
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Instagram</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <div class="left-side">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/2048px-Instagram_logo_2016.svg.png" class="logo">
+            <h1 class="text">
+                Посмотрите, какими моментами <br> из жизни поделились ваши <br> <span class="gradient-text">близкие друзья.</span>
+            </h1>
+            <img src="https://static.cdninstagram.com/rsrc.php/v4/yD/r/nWfBjz-5_uf.png" class="phones-img">
+        </div>
+        <div class="right-side">
+            <h3>Войти в Instagram</h3>
+            <input type="text" placeholder="Имя пользователя, телефон или email">
+            <input type="password" placeholder="Пароль">
+            <button class="blue-btn">Войти</button>
+            <a href="#" class="forgot">Забыли пароль?</a>
+            <a href="#" class="fb-btn">
+                <span class="fb-icon">f</span> Войти через Facebook
+            </a>
+            <button class="white-btn">Создать новый аккаунт</button>
+            <div class="meta-logo">∞ Meta</div>
+        </div>
+    </div>
+</body>
+</html>
