--- a/Lab2/task3/index.html
+++ b/Lab2/task3/index.html
@@ -1,1 +1,61 @@
-
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <title>GitHub Pricing Clone</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+<section class="pricing-section">
+  <header class="pricing-header">
+    <h1>Try the Copilot-powered platform</h1>
+    <p>We get it, there's a lot you can do with GitHub. That's why we've packed all of it into a single risk-free trial...</p>
+    <button class="btn-primary btn-hero">Start free for 30 days</button>
+  </header>
+  <div class="pricing-grid">
+    <div class="card">
+      <h3>Free</h3>
+      <p style="color: #636c76;">The basics for individuals and organizations</p>
+      <div class="price">0$</div>
+      <p class="price-sub">per user/month</p>
+      <button class="btn-outline">Join for free</button>
+      <ul class="features">
+        <li>Unlimited public/private repositories</li>
+        <li>Dependabot security updates</li>
+        <li>2,000 CI/CD minutes/month</li>
+        <li class="addon-title">FEATURED ADD-ONS</li>
+        <li>GitHub Copilot Access</li>
+      </ul>
+    </div>
+    <div class="card">
+      <h3>Team</h3>
+      <p style="color: #636c76;">Advanced collaboration for individuals</p>
+      <div class="price">4$</div>
+      <p class="price-sub">per user/month</p>
+      <button class="btn-primary">Continue with Team</button>
+      <ul class="features">
+        <li>Everything included in Free, plus...</li>
+        <li>Access to GitHub Codespaces</li>
+        <li>Multiple reviewers in pull requests</li>
+        <li>3,000 CI/CD minutes/month</li>
+      </ul>
+    </div>
+    <div class="card recommended">
+      <div class="recommended-badge">RECOMMENDED</div>
+      <h3>Enterprise</h3>
+      <p style="color: #636c76;">Security, compliance, and flexible deployment</p>
+      <div class="price">21$</div> 
+      <p class="price-sub">per user/month</p>
+      <button class="btn-primary">Start a free trial</button>
+      <button class="btn-outline">Contact Sales</button>
+      <ul class="features">
+        <li>Everything included in Team, plus...</li>
+        <li>Enterprise Managed Users</li>
+        <li>Audit Log API</li>
+        <li>SAML single sign-on</li>
+      </ul>
+    </div>
+  </div>
+</section>
+</body>
+</html>
